# brewgen

./: Cargo.toml  LICENSE  README.md  release.sh
.github/workflows/: release.yml  rust.yml
src/: main.rs
