[package]
name = "brewgen"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
octocrab = "0.38.0"
sha256 = "1.5.0"
tokio = { version = "1", features = ["full"] }
openssl = { version = "0.10", features = ["vendored"] }
